@@ -7,3 +7,11 @@ type:0,表示折扣优惠;1,表示虚拟支付,如余额;2,表示实际支付；
 PAY_EXTRAS = {
     '1':{'pid':1,'type':0,'value':2,'name':'APP支付减2元'},
 } 
+
+
+SHARE_LINK = ""
+PYQ_TITLES = [
+    '告诉你，今年元宵其实要这样过。。。#脸红心跳',
+    '哈哈，老公好不好，抢了睡袋就知道！',
+    '哈哈，只有1%的人知道，原来这两个我都想要～'
+]
